template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  Template to create the infrastructure for the Auth Relying Party stub.

Transform:
  - AWS::Serverless-2016-10-31
  - AWS::LanguageExtensions

Parameters:
  VpcStackName:
    Description: The name of the stack that defines the VPC that this container will run in
    Type: String
  Environment:
    Description: Environment the infrastructure is deployed to
    Type: String
  PermissionsBoundary:
    Type: String
    Description: >
      The ARN of the permissions boundary to apply to any role created by the template
    Default: nonenonenonenonenonenone
  CodeSigningConfigArn:
    Type: String
    Description: >
      The ARN of the Code Signing Config to use, provided by the deployment pipeline
    Default: none

Conditions:
  UsePermissionsBoundary:
    Fn::Not:
      - Fn::Equals:
          - !Ref PermissionsBoundary
          - nonenonenonenonenonenone
  UseCodeSigning:
    Fn::Not:
      - Fn::Equals:
          - !Ref CodeSigningConfigArn
          - none
  GenerateTestClient:
    Fn::Or:
      - Fn::Equals:
          - !Ref Environment
          - build
      - Fn::Equals:
          - !Ref Environment
          - staging

Globals:
  Function:
    PermissionsBoundary: !If
      - UsePermissionsBoundary
      - !Ref PermissionsBoundary
      - !Ref AWS::NoValue
    CodeSigningConfigArn: !If
      - UseCodeSigning
      - !Ref CodeSigningConfigArn
      - !Ref AWS::NoValue

Metadata:
  cfn-lint:
    config:
      ignore_checks:
        - E3031
        - W8003

Mappings:
  EnvironmentConfiguration:
    dev:
      defaultClientId: fvWopxEECoAhdU7uTYqtF28gueApgiow
      stubUrl: https://rp-dev.build.stubs.account.gov.uk
      docappDefaultClientId: VYx7mufwei8cLZ2FUKQY3cdNLYponNtz
      docAppStubUrl: https://doc-app-rp-dev.build.stubs.account.gov.uk
    build:
      defaultClientId: P5OQvWV21U0OW7U5g27d6MU2LLznYYaM
      stubUrl: https://rp-build.build.stubs.account.gov.uk
      docappDefaultClientId: Ig3PQrcM1BldZ5e2pBCjS5WE3loi59CA
      docAppStubUrl: https://doc-app-rp-build.build.stubs.account.gov.uk
      testClientDefaultClientId: Ykg9fGyY76On4e8tPvFabK5BIl65EkGH
      testClientStubUrl: https://acceptance-test-rp-build.build.stubs.account.gov.uk
      testClientInstances: 1
      testClientInstancesmincount: 1
      testClientInstancesmaxcount: 2
      ALBPolicyTargetValue: 2000      
      testClientCpu: 1024
      testClientMemory: 2048
    staging:
      defaultClientId: 3NKFv679oYlMdyrhKErrTGbzBy2h8rrd
      stubUrl: https://rp-staging.build.stubs.account.gov.uk
      docappDefaultClientId: hGfX74hTP2SIBlhpZj42UqdlTueiiDES
      docAppStubUrl: https://doc-app-rp-staging.build.stubs.account.gov.uk
      testClientDefaultClientId: nsR2wZ7EebJ2VOzE1LUa9iAVadunWQP3
      testClientStubUrl: https://perf-test-rp-staging.build.stubs.account.gov.uk
      testClientInstances: 1
      testClientInstancesmincount: 1
      testClientInstancesmaxcount: 30
      ALBPolicyTargetValue: 2000
      testClientCpu: 1024
      testClientMemory: 2048
    integration:
      defaultClientId: gjWNvoLYietMjeaOE6Zoww533u18ZUfr
      stubUrl: https://rp-integration.build.stubs.account.gov.uk
      docappDefaultClientId: 7LXEFgsDuEHO3ZEZXM1SxC5snDD156zI
      docAppStubUrl: https://doc-app-rp-integration.build.stubs.account.gov.uk
    production:
      defaultClientId: 5Vfplamzln0AoarlnX5CX4UTqyh59xfA
      stubUrl: https://rp.stubs.account.gov.uk
      docappDefaultClientId: S71RGqYAtj9r6AXQtnSEfSHlNBEOXYMd
      docAppStubUrl: https://doc-app-rp.stubs.account.gov.uk

Resources:
  #
  # Fargate cluster
  #
  FargateCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterSettings:
        - Name: containerInsights
          Value: enabled
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-FargateCluster
        - Key: Service
          Value: Relying Party stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  ContainerService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref FargateCluster
      TaskDefinition: !Ref TaskDefinition
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          Subnets:
            - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdA
            - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdB
          SecurityGroups:
            - !Ref ContainerServiceSecurityGroup
      LoadBalancers:
        - ContainerName: !Sub ${AWS::StackName}-ECSServiceTaskDefinition
          ContainerPort: 8080
          TargetGroupArn: !Ref ApplicationLoadBalancerTargetGroup
      PropagateTags: SERVICE
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-ContainerService
        - Key: Service
          Value: Relying Party stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk
    DependsOn: ApplicationLoadBalancerListener

  ContainerServiceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group to access the Container Service
      GroupName: !Join
        - "-"
        - - !Ref AWS::StackName
          - ContainerService
          - Fn::Select:
              - 4
              - Fn::Split:
                  - "-"
                  - Fn::Select:
                      - 2
                      - Fn::Split:
                          - "/"
                          - Ref: AWS::StackId
      SecurityGroupIngress:
        - Description: Allow traffic from the load balancer on port 8080
          SourceSecurityGroupId: !GetAtt ApplicationLoadBalancerSecurityGroup.GroupId
          IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-ContainerServiceSecurityGroup
        - Key: Service
          Value: Relying Party stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  DocAppContainerService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref FargateCluster
      TaskDefinition: !Ref DocAppTaskDefinition
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          Subnets:
            - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdA
            - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdB
          SecurityGroups:
            - !Ref DocAppContainerServiceSecurityGroup
      LoadBalancers:
        - ContainerName: !Sub ${AWS::StackName}-DocAppECSServiceTaskDefinition
          ContainerPort: 8080
          TargetGroupArn: !Ref DocAppApplicationLoadBalancerTargetGroup
      PropagateTags: SERVICE
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-DocAppContainerService
        - Key: Service
          Value: Relying Party Doc App stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk
    DependsOn: DocAppApplicationLoadBalancerListener

  DocAppContainerServiceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group to access the Container Service
      GroupName: !Join
        - "-"
        - - !Ref AWS::StackName
          - DocAppContainerService
          - Fn::Select:
              - 4
              - Fn::Split:
                  - "-"
                  - Fn::Select:
                      - 2
                      - Fn::Split:
                          - "/"
                          - Ref: AWS::StackId
      SecurityGroupIngress:
        - Description: Allow traffic from the load balancer on port 8080
          SourceSecurityGroupId: !GetAtt DocAppApplicationLoadBalancerSecurityGroup.GroupId
          IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-DocAppContainerServiceSecurityGroup
        - Key: Service
          Value: Relying Party Doc App stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  TestClientContainerService:
    Type: AWS::ECS::Service
    Condition: GenerateTestClient
    Properties:
      Cluster: !Ref FargateCluster
      TaskDefinition: !Ref TestClientTaskDefinition
      DesiredCount:  !FindInMap [ EnvironmentConfiguration, !Ref Environment, testClientInstances ]
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          Subnets:
            - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdA
            - Fn::ImportValue: !Sub ${VpcStackName}-ProtectedSubnetIdB
          SecurityGroups:
            - !Ref TestClientContainerServiceSecurityGroup
      LoadBalancers:
        - ContainerName: !Sub ${AWS::StackName}-TestClientECSServiceTaskDefinition
          ContainerPort: 8080
          TargetGroupArn: !Ref TestClientApplicationLoadBalancerTargetGroup
      PropagateTags: SERVICE
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-TestClientContainerService
        - Key: Service
          Value: Relying Party Test Client stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk
    DependsOn: TestClientApplicationLoadBalancerListener

  TestClientCSScalableTarget:
    Type: AWS::ApplicationAutoScaling::ScalableTarget
    Condition: GenerateTestClient
    Properties:
      MaxCapacity: !FindInMap [ EnvironmentConfiguration, !Ref Environment, testClientInstancesmaxcount ]
      MinCapacity: !FindInMap [ EnvironmentConfiguration, !Ref Environment, testClientInstancesmincount ]
      ScalableDimension: "ecs:service:DesiredCount"
      ServiceNamespace: "ecs"
      ResourceId: !Join
        - /
        - - service
          - !Ref FargateCluster
          - !GetAtt TestClientContainerService.Name

  TestClientCSScalingPolicyCPU:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Condition: GenerateTestClient
    Properties:
      PolicyName: !Sub ${AWS::StackName}-target-tracking-cpu
      PolicyType: TargetTrackingScaling
      ScalingTargetId: !Ref TestClientCSScalableTarget
      TargetTrackingScalingPolicyConfiguration:
        TargetValue: 50.0
        ScaleInCooldown: 240
        ScaleOutCooldown: 60
        PredefinedMetricSpecification:
          PredefinedMetricType: ECSServiceAverageCPUUtilization

  TestClientCSScalingPolicyALB:
    Type: AWS::ApplicationAutoScaling::ScalingPolicy
    Condition: GenerateTestClient
    Properties:
      PolicyName: !Sub ${AWS::StackName}-alb-requests-per-target-per-minute
      PolicyType: TargetTrackingScaling
      ScalingTargetId: !Ref TestClientCSScalableTarget
      TargetTrackingScalingPolicyConfiguration:
        TargetValue: !FindInMap [ EnvironmentConfiguration, !Ref Environment, ALBPolicyTargetValue ]
        ScaleInCooldown: 180
        ScaleOutCooldown: 30
        DisableScaleIn: true
        PredefinedMetricSpecification:
          PredefinedMetricType: ALBRequestCountPerTarget
          ResourceLabel: !Join 
            - '/' 
            - - !GetAtt TestClientApplicationLoadBalancer.LoadBalancerFullName
              - !GetAtt TestClientApplicationLoadBalancerTargetGroup.TargetGroupFullName

  TestClientContainerServiceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: GenerateTestClient
    Properties:
      GroupDescription: Security Group to access the Container Service
      GroupName: !Join
        - "-"
        - - !Ref AWS::StackName
          - TestClientContainerService
          - Fn::Select:
              - 4
              - Fn::Split:
                  - "-"
                  - Fn::Select:
                      - 2
                      - Fn::Split:
                          - "/"
                          - Ref: AWS::StackId
      SecurityGroupIngress:
        - Description: Allow traffic from the load balancer on port 8080
          SourceSecurityGroupId: !GetAtt TestClientApplicationLoadBalancerSecurityGroup.GroupId
          IpProtocol: tcp
          FromPort: 8080
          ToPort: 8080
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-TestClientContainerServiceSecurityGroup
        - Key: Service
          Value: Relying Party Test Client stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  #
  # Fargate tasks
  #

  TaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Name: !Sub ${AWS::StackName}-ECSServiceTaskDefinition
          Image: CONTAINER-IMAGE-PLACEHOLDER
          PortMappings:
            - ContainerPort: 8080
              Protocol: tcp
          Essential: true
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Sub /aws/ecs/${AWS::StackName}
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: ecs
          Environment:
            - Name: DEFAULT_CLIENT_ID
              Value: !FindInMap [ EnvironmentConfiguration, !Ref Environment, defaultClientId ]
            - Name: CONFIGURATION_SOURCE
              Value: !Ref RpConfigurationSecret
            - Name: STUB_URL
              Value: !FindInMap [ EnvironmentConfiguration, !Ref Environment, stubUrl ]
      Cpu: 256
      Memory: 512
      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
      TaskRoleArn: !GetAtt TaskRole.Arn
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-TaskDefinition
        - Key: Service
          Value: Relying Party stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  TaskLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/ecs/${AWS::StackName}
      RetentionInDays: 30
      KmsKeyId: !GetAtt KmsKey.Arn

  TaskLogGroupSubscriptionFilter:
    Type: AWS::Logs::SubscriptionFilter
    DependsOn:
      - TaskLogGroup
    Properties:
      LogGroupName: !Sub /aws/ecs/${AWS::StackName}
      DestinationArn: arn:aws:logs:eu-west-2:885513274347:destination:csls_cw_logs_destination_prodpython-2
      FilterPattern: ""

  TaskRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
            Condition:
              ArnLike:
                aws:SourceArn: !Sub arn:aws:ecs:${AWS::Region}:${AWS::AccountId}:*
              StringEquals:
                aws:SourceAccount: !Ref AWS::AccountId
      ManagedPolicyArns:
        - !Ref ConfigurationSecretsManagerAccessPolicy
      PermissionsBoundary: !If
        - UsePermissionsBoundary
        - !Ref PermissionsBoundary
        - !Ref AWS::NoValue
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-TaskRole
        - Key: Service
          Value: Relying Party stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  TaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action:
              - sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
      PermissionsBoundary: !If
        - UsePermissionsBoundary
        - !Ref PermissionsBoundary
        - !Ref AWS::NoValue
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-TaskExecutionRole
        - Key: Service
          Value: Relying Party stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  DocAppTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      ContainerDefinitions:
        - Name: !Sub ${AWS::StackName}-DocAppECSServiceTaskDefinition
          Image: CONTAINER-IMAGE-PLACEHOLDER
          PortMappings:
            - ContainerPort: 8080
              Protocol: tcp
          Essential: true
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Sub /aws/ecs/${AWS::StackName}DocApp
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: ecs
          Environment:
            - Name: DEFAULT_CLIENT_ID
              Value: !FindInMap [ EnvironmentConfiguration, !Ref Environment, docappDefaultClientId ]
            - Name: CONFIGURATION_SOURCE
              Value: !Ref RpConfigurationSecret
            - Name: STUB_URL
              Value: !FindInMap [ EnvironmentConfiguration, !Ref Environment, docAppStubUrl ]
      Cpu: 256
      Memory: 512
      TaskRoleArn: !GetAtt TaskRole.Arn
      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-DocAppTaskDefinition
        - Key: Service
          Value: Relying Party Doc App stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  DocAppTaskLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/ecs/${AWS::StackName}DocApp
      RetentionInDays: 30
      KmsKeyId: !GetAtt KmsKey.Arn

  DocAppTaskLogGroupSubscriptionFilter:
    Type: AWS::Logs::SubscriptionFilter
    DependsOn:
      - DocAppTaskLogGroup
    Properties:
      LogGroupName: !Sub /aws/ecs/${AWS::StackName}DocApp
      DestinationArn: arn:aws:logs:eu-west-2:885513274347:destination:csls_cw_logs_destination_prodpython-2
      FilterPattern: ""

  TestClientTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Condition: GenerateTestClient
    Properties:
      ContainerDefinitions:
        - Name: !Sub ${AWS::StackName}-TestClientECSServiceTaskDefinition
          Image: CONTAINER-IMAGE-PLACEHOLDER
          PortMappings:
            - ContainerPort: 8080
              Protocol: tcp
          Essential: true
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Sub /aws/ecs/${AWS::StackName}TestClient
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: ecs
          Environment:
            - Name: DEFAULT_CLIENT_ID
              Value: !FindInMap [ EnvironmentConfiguration, !Ref Environment, testClientDefaultClientId ]
            - Name: CONFIGURATION_SOURCE
              Value: !Ref RpConfigurationSecret
            - Name: STUB_URL
              Value: !FindInMap [ EnvironmentConfiguration, !Ref Environment, testClientStubUrl ]
      Cpu: !FindInMap [ EnvironmentConfiguration, !Ref Environment, testClientCpu ]
      Memory: !FindInMap [ EnvironmentConfiguration, !Ref Environment, testClientMemory ]
      TaskRoleArn: !GetAtt TaskRole.Arn
      ExecutionRoleArn: !GetAtt TaskExecutionRole.Arn
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-TestClientTaskDefinition
        - Key: Service
          Value: Relying Party Test Client stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  TestClientTaskLogGroup:
    Type: AWS::Logs::LogGroup
    Condition: GenerateTestClient
    Properties:
      LogGroupName: !Sub /aws/ecs/${AWS::StackName}TestClient
      RetentionInDays: 30
      KmsKeyId: !GetAtt KmsKey.Arn

  #
  # Load balancing
  #

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      SecurityGroups:
        - !GetAtt ApplicationLoadBalancerSecurityGroup.GroupId
      Subnets:
        - Fn::ImportValue: !Sub ${VpcStackName}-PrivateSubnetIdA
        - Fn::ImportValue: !Sub ${VpcStackName}-PrivateSubnetIdB
      LoadBalancerAttributes:
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: true
      Scheme: internal
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-ApplicationLoadBalancer
        - Key: Service
          Value: Relying Party stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  ApplicationLoadBalancerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPort: traffic-port
      HealthCheckProtocol: HTTP
      HealthCheckPath: /
      Port: 8080
      Protocol: HTTP
      ProtocolVersion: HTTP1
      Matcher:
        HttpCode: 200
      TargetType: ip
      UnhealthyThresholdCount: 2
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 5
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-ApplicationLoadBalancerTargetGroup
        - Key: Service
          Value: Relying Party stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  ApplicationLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      # checkov:skip=CKV_AWS_2:Certificate generation must be resolved before the listener can use HTTPS.
      # checkov:skip=CKV_AWS_103:The load balancer cannot use TLS v1.2 until HTTPS is enabled.
      DefaultActions:
        - TargetGroupArn: !Ref ApplicationLoadBalancerTargetGroup
          Type: forward
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

  ApplicationLoadBalancerListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !Ref ApplicationLoadBalancerTargetGroup
                Weight: 1
      Conditions:
        - Field: http-header
          HttpHeaderConfig:
            HttpHeaderName: User-Agent
            Values:
              - Mozilla
      ListenerArn: !Ref ApplicationLoadBalancerListener
      Priority: 1

  ApplicationLoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for the Application Load Balancer
      GroupName: !Join
        - "-"
        - - !Ref AWS::StackName
          - ApplicationLoadBalancer
          - Fn::Select:
              - 4
              - Fn::Split:
                  - "-"
                  - Fn::Select:
                      - 2
                      - Fn::Split:
                          - "/"
                          - Ref: AWS::StackId
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-ApplicationLoadBalancerSecurityGroup
        - Key: Service
          Value: Relying Party stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  ApplicationLoadBalancerSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ApplicationLoadBalancerSecurityGroup.GroupId
      CidrIp:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcCidr
      Description: Allow traffic from the VPC on port 80
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80

  ApplicationLoadBalancerSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt ApplicationLoadBalancerSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt ContainerServiceSecurityGroup.GroupId
      Description: Allow traffic to Container Service
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080

  DocAppApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      SecurityGroups:
        - !GetAtt DocAppApplicationLoadBalancerSecurityGroup.GroupId
      Subnets:
        - Fn::ImportValue: !Sub ${VpcStackName}-PrivateSubnetIdA
        - Fn::ImportValue: !Sub ${VpcStackName}-PrivateSubnetIdB
      LoadBalancerAttributes:
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: true
      Scheme: internal
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-DocAppApplicationLoadBalancer
        - Key: Service
          Value: Relying Party Doc App stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  DocAppApplicationLoadBalancerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      HealthCheckPort: traffic-port
      HealthCheckProtocol: HTTP
      HealthCheckPath: /
      Port: 8080
      Protocol: HTTP
      ProtocolVersion: HTTP1
      Matcher:
        HttpCode: 200
      TargetType: ip
      UnhealthyThresholdCount: 2
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 5
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-DocAppApplicationLoadBalancerTargetGroup
        - Key: Service
          Value: Relying Party Doc App stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  DocAppApplicationLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      # checkov:skip=CKV_AWS_2:Certificate generation must be resolved before the listener can use HTTPS.
      # checkov:skip=CKV_AWS_103:The load balancer cannot use TLS v1.2 until HTTPS is enabled.
      DefaultActions:
        - TargetGroupArn: !Ref DocAppApplicationLoadBalancerTargetGroup
          Type: forward
      LoadBalancerArn: !Ref DocAppApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

  DocAppApplicationLoadBalancerListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Properties:
      Actions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !Ref DocAppApplicationLoadBalancerTargetGroup
                Weight: 1
      Conditions:
        - Field: http-header
          HttpHeaderConfig:
            HttpHeaderName: User-Agent
            Values:
              - Mozilla
      ListenerArn: !Ref DocAppApplicationLoadBalancerListener
      Priority: 1

  DocAppApplicationLoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for the Doc App Application Load Balancer
      GroupName: !Join
        - "-"
        - - !Ref AWS::StackName
          - DocAppApplicationLoadBalancer
          - Fn::Select:
              - 4
              - Fn::Split:
                  - "-"
                  - Fn::Select:
                      - 2
                      - Fn::Split:
                          - "/"
                          - Ref: AWS::StackId
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-DocAppApplicationLoadBalancerSecurityGroup
        - Key: Service
          Value: Relying Party Doc App stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  DocAppApplicationLoadBalancerSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt DocAppApplicationLoadBalancerSecurityGroup.GroupId
      CidrIp:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcCidr
      Description: Allow traffic from the VPC on port 80
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80

  DocAppApplicationLoadBalancerSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !GetAtt DocAppApplicationLoadBalancerSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt DocAppContainerServiceSecurityGroup.GroupId
      Description: Allow traffic to Container Service
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080

  TestClientApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Condition: GenerateTestClient
    Properties:
      SecurityGroups:
        - !GetAtt TestClientApplicationLoadBalancerSecurityGroup.GroupId
      Subnets:
        - Fn::ImportValue: !Sub ${VpcStackName}-PrivateSubnetIdA
        - Fn::ImportValue: !Sub ${VpcStackName}-PrivateSubnetIdB
      LoadBalancerAttributes:
        - Key: routing.http.drop_invalid_header_fields.enabled
          Value: true
      Scheme: internal
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-TestClientApplicationLoadBalancer
        - Key: Service
          Value: Relying Party Test Client stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  TestClientApplicationLoadBalancerTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Condition: GenerateTestClient
    Properties:
      HealthCheckPort: traffic-port
      HealthCheckProtocol: HTTP
      HealthCheckPath: /
      Port: 8080
      Protocol: HTTP
      ProtocolVersion: HTTP1
      Matcher:
        HttpCode: 200
      TargetType: ip
      UnhealthyThresholdCount: 2
      HealthyThresholdCount: 2
      HealthCheckIntervalSeconds: 10
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId
      TargetGroupAttributes:
        - Key: deregistration_delay.timeout_seconds
          Value: 5
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-TestClientApplicationLoadBalancerTargetGroup
        - Key: Service
          Value: Relying Party Test Client stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  TestClientApplicationLoadBalancerListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Condition: GenerateTestClient
    Properties:
      # checkov:skip=CKV_AWS_2:Certificate generation must be resolved before the listener can use HTTPS.
      # checkov:skip=CKV_AWS_103:The load balancer cannot use TLS v1.2 until HTTPS is enabled.
      DefaultActions:
        - TargetGroupArn: !Ref TestClientApplicationLoadBalancerTargetGroup
          Type: forward
      LoadBalancerArn: !Ref TestClientApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

  TestClientApplicationLoadBalancerListenerRule:
    Type: AWS::ElasticLoadBalancingV2::ListenerRule
    Condition: GenerateTestClient
    Properties:
      Actions:
        - Type: forward
          ForwardConfig:
            TargetGroups:
              - TargetGroupArn: !Ref TestClientApplicationLoadBalancerTargetGroup
                Weight: 1
      Conditions:
        - Field: http-header
          HttpHeaderConfig:
            HttpHeaderName: User-Agent
            Values:
              - Mozilla
      ListenerArn: !Ref TestClientApplicationLoadBalancerListener
      Priority: 1

  TestClientApplicationLoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Condition: GenerateTestClient
    Properties:
      GroupDescription: Security Group for the Test Client Application Load Balancer
      GroupName: !Join
        - "-"
        - - !Ref AWS::StackName
          - TestClientApplicationLoadBalancer
          - Fn::Select:
              - 4
              - Fn::Split:
                  - "-"
                  - Fn::Select:
                      - 2
                      - Fn::Split:
                          - "/"
                          - Ref: AWS::StackId
      VpcId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcId
      Tags:
        - Key: Name
          Value: !Sub ${AWS::StackName}-TestClientApplicationLoadBalancerSecurityGroup
        - Key: Service
          Value: Relying Party Test Client stub
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  TestClientApplicationLoadBalancerSecurityGroupIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: GenerateTestClient
    Properties:
      GroupId: !GetAtt TestClientApplicationLoadBalancerSecurityGroup.GroupId
      CidrIp:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcCidr
      Description: Allow traffic from the VPC on port 80
      IpProtocol: tcp
      FromPort: 80
      ToPort: 80

  TestClientApplicationLoadBalancerSecurityGroupEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Condition: GenerateTestClient
    Properties:
      GroupId: !GetAtt TestClientApplicationLoadBalancerSecurityGroup.GroupId
      DestinationSecurityGroupId: !GetAtt TestClientContainerServiceSecurityGroup.GroupId
      Description: Allow traffic to Container Service
      IpProtocol: tcp
      FromPort: 8080
      ToPort: 8080

  #
  # API Gateway
  #

  ApiGateway:
    Type: AWS::ApiGatewayV2::Api
    Properties:
      Name: !Sub ${AWS::StackName}-ApiGateway
      ProtocolType: HTTP
      Tags:
        Service: Relying Party stub
        Name: !Sub ${AWS::StackName}-ApiGateway
        Source: govuk-one-login/relying-party-stub
        Owner: di-orchestration@digital.cabinet-office.gov.uk

  ApiGatewayIntegration:
    Type: AWS::ApiGatewayV2::Integration
    Properties:
      ApiId: !Ref ApiGateway
      IntegrationType: HTTP_PROXY
      ConnectionId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcLinkId
      ConnectionType: VPC_LINK
      IntegrationMethod: ANY
      IntegrationUri: !Ref ApplicationLoadBalancerListener
      PayloadFormatVersion: 1.0

  ApiRoute:
    Type: AWS::ApiGatewayV2::Route
    Properties:
      ApiId: !Ref ApiGateway
      RouteKey: ANY /{proxy+}
      Target: !Sub integrations/${ApiGatewayIntegration}
      AuthorizationType: CUSTOM
      AuthorizerId: !Ref ApiGatewayAuthorizer

  ApiDefaultStage:
    Type: AWS::ApiGatewayV2::Stage
    Properties:
      ApiId: !Ref ApiGateway
      StageName: $default
      AutoDeploy: true
      Tags:
        Service: Relying Party stub
        Name: !Sub ${AWS::StackName}-ApiDefaultStage
        Source: govuk-one-login/relying-party-stub
        Owner: di-orchestration@digital.cabinet-office.gov.uk
      AccessLogSettings:
        DestinationArn: !GetAtt ApiGatewayAccessLogsGroup.Arn
        Format:
          Fn::ToJsonString:
            requestId: $context.requestId
            ip: $context.identity.sourceIp
            requestTime: $context.requestTime
            httpMethod: $context.httpMethod
            path: $context.path
            routeKey: $context.routeKey
            status: $context.status
            protocol: $context.protocol
            responseLength: $context.responseLength

  ApiGatewayAccessLogsGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/apigateway/${AWS::StackName}-ApiGatewayAccessLogsGroup
      RetentionInDays: 30
      KmsKeyId: !GetAtt KmsKey.Arn

  ApiGatewayLambdaFunctionAuthorizer:
    Type: AWS::Serverless::Function
    Properties:
      # checkov:skip=CKV_AWS_116: DLQ not required
      # checkov:skip=CKV_AWS_117: Internet access not required
      ReservedConcurrentExecutions: 1
      Handler: authorizer.handler
      MemorySize: 128
      Runtime: nodejs24.x
      Timeout: 900
      Environment:
        Variables:
          ENVIRONMENT: !Ref Environment
      CodeUri: authorizer
    Tags:
      - Key: Name
        Value: !Sub ${AWS::StackName}-ApiGatewayLambdaFunctionAuthorizer
      - Key: Service
        Value: Relying Party stub
      - Key: Source
        Value: govuk-one-login/relying-party-stub
      - Key: Owner
        Value: di-orchestration@digital.cabinet-office.gov.uk

  ApiGatewayAuthorizer:
    Type: AWS::ApiGatewayV2::Authorizer
    Properties:
      Name: !Sub ${AWS::StackName}-ApiGatewayAuthorizer
      ApiId: !Ref ApiGateway
      AuthorizerResultTtlInSeconds: 60
      IdentitySource:
        - $context.identity.sourceIp
      AuthorizerType: REQUEST
      AuthorizerPayloadFormatVersion: 2.0
      EnableSimpleResponses: true
      AuthorizerUri: !Join
        - ""
        - - "arn:aws:apigateway:"
          - !Ref AWS::Region
          - :lambda:path/2015-03-31/functions/
          - !GetAtt ApiGatewayLambdaFunctionAuthorizer.Arn
          - /invocations

  ApiGatewayAuthorizerInvokePermission:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName: !GetAtt ApiGatewayLambdaFunctionAuthorizer.Arn
      Action: lambda:InvokeFunction
      Principal: apigateway.amazonaws.com
      SourceArn: !Join
        - ""
        - - "arn:aws:execute-api:"
          - !Ref AWS::Region
          - ":"
          - !Ref AWS::AccountId
          - ":"
          - !Ref ApiGateway
          - "/"
          - "authorizers/"
          - !Ref ApiGatewayAuthorizer

  DocAppApiGateway:
    Type: AWS::ApiGatewayV2::Api
    Properties:
      Name: !Sub ${AWS::StackName}-DocAppApiGateway
      ProtocolType: HTTP
      Tags:
        Service: Relying Party Doc App stub
        Name: !Sub ${AWS::StackName}-DocAppApiGateway
        Source: govuk-one-login/relying-party-stub
        Owner: di-orchestration@digital.cabinet-office.gov.uk

  DocAppApiGatewayIntegration:
    Type: AWS::ApiGatewayV2::Integration
    Properties:
      ApiId: !Ref DocAppApiGateway
      IntegrationType: HTTP_PROXY
      ConnectionId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcLinkId
      ConnectionType: VPC_LINK
      IntegrationMethod: ANY
      IntegrationUri: !Ref DocAppApplicationLoadBalancerListener
      PayloadFormatVersion: 1.0

  DocAppApiRoute:
    Type: AWS::ApiGatewayV2::Route
    Properties:
      ApiId: !Ref DocAppApiGateway
      RouteKey: ANY /{proxy+}
      Target: !Sub integrations/${DocAppApiGatewayIntegration}
      AuthorizationType: CUSTOM
      AuthorizerId: !Ref DocAppApiGatewayAuthorizer

  DocAppApiDefaultStage:
    Type: AWS::ApiGatewayV2::Stage
    Properties:
      ApiId: !Ref DocAppApiGateway
      StageName: $default
      AutoDeploy: true
      Tags:
        Service: Relying Party Doc App stub
        Name: !Sub ${AWS::StackName}-DocAppApiDefaultStage
        Source: govuk-one-login/relying-party-stub
        Owner: di-orchestration@digital.cabinet-office.gov.uk
      AccessLogSettings:
        DestinationArn: !GetAtt DocAppApiGatewayAccessLogsGroup.Arn
        Format:
          Fn::ToJsonString:
            requestId: $context.requestId
            ip: $context.identity.sourceIp
            requestTime: $context.requestTime
            httpMethod: $context.httpMethod
            path: $context.path
            routeKey: $context.routeKey
            status: $context.status
            protocol: $context.protocol
            responseLength: $context.responseLength

  DocAppApiGatewayAccessLogsGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /aws/apigateway/${AWS::StackName}-DocAppApiGatewayAccessLogsGroup
      RetentionInDays: 30
      KmsKeyId: !GetAtt KmsKey.Arn

  DocAppApiGatewayAuthorizer:
    Type: AWS::ApiGatewayV2::Authorizer
    Properties:
      Name: !Sub ${AWS::StackName}-DocAppApiGatewayAuthorizer
      ApiId: !Ref DocAppApiGateway
      AuthorizerResultTtlInSeconds: 60
      IdentitySource:
        - $context.identity.sourceIp
      AuthorizerType: REQUEST
      AuthorizerPayloadFormatVersion: 2.0
      EnableSimpleResponses: true
      AuthorizerUri: !Join
        - ""
        - - "arn:aws:apigateway:"
          - !Ref AWS::Region
          - :lambda:path/2015-03-31/functions/
          - !GetAtt ApiGatewayLambdaFunctionAuthorizer.Arn
          - /invocations

  DocAppApiGatewayAuthorizerInvokePermission:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName: !GetAtt ApiGatewayLambdaFunctionAuthorizer.Arn
      Action: lambda:InvokeFunction
      Principal: apigateway.amazonaws.com
      SourceArn: !Join
        - ""
        - - "arn:aws:execute-api:"
          - !Ref AWS::Region
          - ":"
          - !Ref AWS::AccountId
          - ":"
          - !Ref DocAppApiGateway
          - "/"
          - "authorizers/"
          - !Ref DocAppApiGatewayAuthorizer

  TestClientApiGateway:
    Type: AWS::ApiGatewayV2::Api
    Condition: GenerateTestClient
    Properties:
      Name: !Sub ${AWS::StackName}-TestClientApiGateway
      ProtocolType: HTTP
      Tags:
        Service: Relying Party Test Client stub
        Name: !Sub ${AWS::StackName}-TestClientApiGateway
        Source: govuk-one-login/relying-party-stub
        Owner: di-orchestration@digital.cabinet-office.gov.uk

  TestClientApiGatewayIntegration:
    Type: AWS::ApiGatewayV2::Integration
    Condition: GenerateTestClient
    Properties:
      ApiId: !Ref TestClientApiGateway
      IntegrationType: HTTP_PROXY
      ConnectionId:
        Fn::ImportValue: !Sub ${VpcStackName}-VpcLinkId
      ConnectionType: VPC_LINK
      IntegrationMethod: ANY
      IntegrationUri: !Ref TestClientApplicationLoadBalancerListener
      PayloadFormatVersion: 1.0

  TestClientApiRoute:
    Type: AWS::ApiGatewayV2::Route
    Condition: GenerateTestClient
    Properties:
      ApiId: !Ref TestClientApiGateway
      RouteKey: ANY /{proxy+}
      Target: !Sub integrations/${TestClientApiGatewayIntegration}
      AuthorizationType: CUSTOM
      AuthorizerId: !Ref TestClientApiGatewayAuthorizer

  TestClientApiDefaultStage:
    Type: AWS::ApiGatewayV2::Stage
    Condition: GenerateTestClient
    Properties:
      ApiId: !Ref TestClientApiGateway
      StageName: $default
      AutoDeploy: true
      Tags:
        Service: Relying Party Test Client stub
        Name: !Sub ${AWS::StackName}-TestClientApiDefaultStage
        Source: govuk-one-login/relying-party-stub
        Owner: di-orchestration@digital.cabinet-office.gov.uk
      AccessLogSettings:
        DestinationArn: !GetAtt TestClientApiGatewayAccessLogsGroup.Arn
        Format:
          Fn::ToJsonString:
            requestId: $context.requestId
            ip: $context.identity.sourceIp
            requestTime: $context.requestTime
            httpMethod: $context.httpMethod
            path: $context.path
            routeKey: $context.routeKey
            status: $context.status
            protocol: $context.protocol
            responseLength: $context.responseLength

  TestClientApiGatewayAccessLogsGroup:
    Type: AWS::Logs::LogGroup
    Condition: GenerateTestClient
    Properties:
      LogGroupName: !Sub /aws/apigateway/${AWS::StackName}-TestClientApiGatewayAccessLogsGroup
      RetentionInDays: 30
      KmsKeyId: !GetAtt KmsKey.Arn

  TestClientApiGatewayAuthorizer:
    Type: AWS::ApiGatewayV2::Authorizer
    Condition: GenerateTestClient
    Properties:
      Name: !Sub ${AWS::StackName}-TestClientApiGatewayAuthorizer
      ApiId: !Ref TestClientApiGateway
      AuthorizerResultTtlInSeconds: 60
      IdentitySource:
        - $context.identity.sourceIp
      AuthorizerType: REQUEST
      AuthorizerPayloadFormatVersion: 2.0
      EnableSimpleResponses: true
      AuthorizerUri: !Join
        - ""
        - - "arn:aws:apigateway:"
          - !Ref AWS::Region
          - :lambda:path/2015-03-31/functions/
          - !GetAtt ApiGatewayLambdaFunctionAuthorizer.Arn
          - /invocations

  TestClientApiGatewayAuthorizerInvokePermission:
    Type: AWS::Lambda::Permission
    Condition: GenerateTestClient
    Properties:
      FunctionName: !GetAtt ApiGatewayLambdaFunctionAuthorizer.Arn
      Action: lambda:InvokeFunction
      Principal: apigateway.amazonaws.com
      SourceArn: !Join
        - ""
        - - "arn:aws:execute-api:"
          - !Ref AWS::Region
          - ":"
          - !Ref AWS::AccountId
          - ":"
          - !Ref TestClientApiGateway
          - "/"
          - "authorizers/"
          - !Ref TestClientApiGatewayAuthorizer

  #
  # KMS
  #

  KmsKey:
    Type: AWS::KMS::Key
    Properties:
      EnableKeyRotation: true
      KeyPolicy:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Principal:
              AWS: !Sub arn:aws:iam::${AWS::AccountId}:root
            Action:
              - kms:*
            Resource: "*"
          - Effect: Allow
            Principal:
              Service: !Sub logs.${AWS::Region}.amazonaws.com
            Action:
              - kms:Encrypt*
              - kms:Decrypt*
              - kms:ReEncrypt*
              - kms:GenerateDataKey*
              - kms:Describe*
            Resource: "*"
            Condition:
              ArnLike:
                kms:EncryptionContext:aws:logs:arn: !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:*
      Tags:
        - Key: Service
          Value: Relying Party stub
        - Key: Name
          Value: !Sub ${AWS::StackName}-KmsKey
        - Key: Source
          Value: govuk-one-login/relying-party-stub
        - Key: Owner
          Value: di-orchestration@digital.cabinet-office.gov.uk

  #
  # Secrets
  #

  # The value of this secret is a json blob containing the configuration for all RP stubs in this environment.
  # Each stub instance uses the same configuration but with a different default client ID.
  RpConfigurationSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub /stubs/rp-${Environment}/CONFIGURATION
      KmsKeyId: !GetAtt KmsKey.Arn

  ConfigurationSecretsManagerAccessPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Effect: Allow
            Action:
              - secretsmanager:GetSecretValue
            Resource: !Ref RpConfigurationSecret
          - Effect: Allow
            Action: kms:Decrypt
            Resource: !GetAtt KmsKey.Arn

  # BEGIN remove
  IdentitySigningPublicKeySecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub /stubs/rp-${Environment}/IDENTITY_SIGNING_PUBLIC_KEY
      KmsKeyId: !GetAtt KmsKey.Arn

  ClientPrivateKeySecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub /stubs/rp-${Environment}/CLIENT_PRIVATE_KEY
      KmsKeyId: !GetAtt KmsKey.Arn

  DocAppClientPrivateKeySecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub /stubs/rp-${Environment}/DOC_APP_CLIENT_PRIVATE_KEY
      KmsKeyId: !GetAtt KmsKey.Arn

  TestClientClientPrivateKeySecret:
    Type: AWS::SecretsManager::Secret
    Condition: GenerateTestClient
    Properties:
      Name: !Sub /stubs/rp-${Environment}/TEST_CLIENT_CLIENT_PRIVATE_KEY
      KmsKeyId: !GetAtt KmsKey.Arn
  # END

Outputs:
  RpApiId:
    Value: !Ref ApiGateway
    Export:
      Name: !Sub RpApiGateway-${Environment}
  DocAppApiId:
    Value: !Ref DocAppApiGateway
    Export:
      Name: !Sub DocAppApiGateway-${Environment}
  TestClientApiId:
    Value: !If
      - GenerateTestClient
      - !Ref TestClientApiGateway
      - "no-value"
    Export:
      Name: !Sub TestClientApiGateway-${Environment}
